fix footer links on small devices

--- a/src/assets/scss/components/footer.scss
+++ b/src/assets/scss/components/footer.scss
@@ -31,9 +31,8 @@
     }
 
     &__links {
-        display: flex;
-        justify-content: space-evenly;
         background-color: #000;
+        padding: 16px;
         
         a, p {
             text-decoration: none;
@@ -47,6 +46,12 @@
     }
 
     @media (min-width: 600px) {
+        &__links {
+            padding: 0;
+            display: flex;
+            justify-content: space-evenly;
+        }
+
         &__container {
             padding-left: $padding;
             padding-right: $padding;
